[gd_scene load_steps=16 format=3 uid="uid://m4c105rclpk5"]

[ext_resource type="Script" path="res://Scripts/Enemys/friendly_enemy.gd" id="1_f8ssk"]
[ext_resource type="Texture2D" uid="uid://baoktensuscg6" path="res://Assets/Enemys/Friendly/Dwarf Sprite Sheet.png" id="2_bf6yd"]
[ext_resource type="PackedScene" uid="uid://fgf6t05ngde" path="res://Scenes/Components/hitbox_component.tscn" id="3_ap0gx"]
[ext_resource type="Texture2D" uid="uid://4ip0nfcqw3u2" path="res://Assets/hello.png" id="4_xkldu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jlo3f"]
atlas = ExtResource("2_bf6yd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ot02"]
atlas = ExtResource("2_bf6yd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wigec"]
atlas = ExtResource("2_bf6yd")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g07p3"]
atlas = ExtResource("2_bf6yd")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scj7u"]
atlas = ExtResource("2_bf6yd")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltt2h"]
atlas = ExtResource("2_bf6yd")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_meied"]
atlas = ExtResource("2_bf6yd")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww6dt"]
atlas = ExtResource("2_bf6yd")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_av4ei"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlo3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ot02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wigec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g07p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scj7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltt2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meied")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww6dt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_14mej"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fpr8e"]
radius = 7.07107

[node name="FriendlyEnemy" type="CharacterBody2D"]
collision_layer = 8
motion_mode = 1
script = ExtResource("1_f8ssk")

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_av4ei")
autoplay = "default"
flip_h = true

[node name="Shadow" type="ColorRect" parent="Visuals"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_14mej")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HitboxComponent" parent="." instance=ExtResource("3_ap0gx")]
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_fpr8e")

[node name="AttackRateTimer" type="Timer" parent="."]
autostart = true

[node name="AttackSpanTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(13, -31)
texture = ExtResource("4_xkldu")
